hphp/hack/test/typecheck/new_inference/typehole/t27505467.php.exp
File "t27505467.php", line 14, characters 8-16:
This call is invalid, this is not a function, it is some value (Typing[4009])
